# py-unifi

./: .gitlab-ci.yml  .travis.yml  README.md  config.json  git_push.sh  pyproject.toml  setup.py  tox.ini
.openapi-generator/: FILES
docs/: Account.md  AccountApi.md  AccountResponse.md  AccountUpdateRequest.md  BroadcastGroup.md  BroadcastGroupApi.md  BroadcastGroupResponse.md  BroadcastGroupUpdateRequest.md  ChannelPlan.md  ChannelPlanApBlacklistedChannels.md  ChannelPlanApi.md  ChannelPlanCoupling.md  ChannelPlanRadioTable.md  ChannelPlanResponse.md  ChannelPlanSatisfactionTable.md  ChannelPlanSiteBlacklistedChannels.md  ChannelPlanUpdateRequest.md  DHCPOption.md  DHCPOptionApi.md  DHCPOptionResponse.md  DHCPOptionUpdateRequest.md  Dashboard.md  DashboardApi.md  DashboardModules.md  DashboardResponse.md  DashboardUpdateRequest.md  Device.md  DeviceApi.md  DeviceConfigNetwork.md  DeviceConnectedBatteryOverrides.md  DeviceEtherLighting.md  DeviceEthernetOverrides.md  DeviceOutletOverrides.md  DevicePortOverrides.md  DeviceRadioIDentifiers.md  DeviceRadioTable.md  DeviceResponse.md  DeviceRpsOverride.md  DeviceRpsPortTable.md  DeviceUpdateRequest.md  (+241 more)
openapi_client/: __init__.py  api_client.py  configuration.py  rest.py
test/: test_account.py  test_account_api.py  test_account_response.py  test_account_update_request.py  test_broadcast_group.py  test_broadcast_group_api.py  test_broadcast_group_response.py  test_broadcast_group_update_request.py  test_channel_plan.py  test_channel_plan_ap_blacklisted_channels.py  test_channel_plan_api.py  test_channel_plan_coupling.py  (+269 more)
(+454 files in other folders)
